--- a/m3/s2/g5/todolist/angular.json
+++ b/m3/s2/g5/todolist/angular.json
@@ -38,7 +38,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
